--- a/gb/20/8/6/n12310889.md
+++ b/gb/20/8/6/n12310889.md
@@ -1,29 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bxhnqj353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bxhnqj353/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bxhnqj353/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bxhnqj353/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bxhnqj353/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bxhnqj353/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bxhnqj353/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bxhnqj353/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>美国笔会发报告 揭中共审查如何影响好莱坞</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>美国笔会报告 揭中共审查如何影响好莱坞</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-127649050-600x400.jpg" />
 <h6>一份美国笔会（PEN America）的新报告指出，中共审查对好莱坞的影响，严重威胁着言论自由与西方世界的价值观。(MARK RALSTON/AFP)
 </h6>
 <hr>
-	<p>【大纪元2020年08月06日讯】（大纪元记者陈霆综合报导）一份<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E7%AC%94%E4%BC%9A.md#1">美国笔会</a>（PEN America）的新报告指出，<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%A1%E6%9F%A5.md#1">中共审查</a>对<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>的影响，严重威胁着言论自由与西方世界的价值观。</p>
-<p>这家总部位于纽约的非营利组织周三（8月5日）发布了一份长达94页、名为“<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>制作被北京审查：美国电影业和中国政府影响力”的报告。</p>
+	<p>【大纪元2020年08月06日讯】（大纪元记者陈霆综合报导）一份<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E7%AC%94%E4%BC%9A.md#1">美国笔会</a>（PEN America）的新报告指出，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%A1%E6%9F%A5.md#1">中共审查</a>对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>的影响，严重威胁着言论自由与西方世界的价值观。</p>
+<p>这家总部位于纽约的非营利组织周三（8月5日）发布了一份长达94页、名为“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%BD%E8%8E%B1%E5%9D%9E.md#1">好莱坞</a>制作被北京审查：美国电影业和中国政府影响力”的报告。</p>
 <p>报告指出，电影形塑了人们思考的方式，而好莱坞作为“世界上最具影响力的艺术和文化媒介”，其制作的影片可影响全球数十亿人。在过去十几年来，中共利用各种文化影响力，让中国国内的内容审查和控制模式超越了中国的边界。</p>
-<p>文中说：“随着美国电影制片商争取在<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%B8%82%E5%9C%BA.md#1">中国市场</a>上映，许多制片商在自由表达方面正做出困难且令人不安的妥协。”</p>
+<p>文中说：“随着美国电影制片商争取在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%B8%82%E5%9C%BA.md#1">中国市场</a>上映，许多制片商在自由表达方面正做出困难且令人不安的妥协。”</p>
 <p>这些改变，包括改变面向全球观众（包括美国观众）的电影内容；进行自我审查；同意在中国上映删减版的内容，甚至在某些情况下“直接邀请中国政府的检查员参与电影设定，以获得如何避开审查禁区的建议”。</p>
 <p>这些审查目的是除了避免中国人民看到中共认为“具有威胁性的内容或主题”，“还积极塑造电影叙事，描绘出一种对中国的特定愿景：一个蓬勃发展、谐和、强大的力量”，而且是在“党不受挑战和良性的领导下统一起来的”。</p>
 <h2><strong>中共的“借船出海”策略</strong></h2>
 <p>报告指，所谓的“借船出海”是中共推动软实力的一项重要策略。这个词通常指，中共秘密将消息或内容放到外国媒体上，利用全球化宣传以影响外国受众。</p>
 <p>作者表示，首次揭露中共“借船出海”的行动是在2015年。一份调查报告揭露，中共国营的中国国际广播电台（CRI）在北美洲、澳洲和欧洲的14个不同国家秘密购买了至少33个广播电台。其所有权结构，隐藏了这些电台最终属于中共的事实。</p>
 <p>但是新闻媒体并不是中共唯一出海的船。</p>
-<p>“好莱坞是世界上最大、最有力量的船”，追踪该问题长达数年的记者贝书颖（Bethany Allen-Ebrahimian）在接受<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E7%AC%94%E4%BC%9A.md#1">美国笔会</a>采访时说，“中国无疑借用了这艘船。好莱坞的叙事充满情感，情感可以触及到新闻报导和国会报告永远无法触及的人。”</p>
+<p>“好莱坞是世界上最大、最有力量的船”，追踪该问题长达数年的记者贝书颖（Bethany Allen-Ebrahimian）在接受<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E7%AC%94%E4%BC%9A.md#1">美国笔会</a>采访时说，“中国无疑借用了这艘船。好莱坞的叙事充满情感，情感可以触及到新闻报导和国会报告永远无法触及的人。”</p>
 <p>该报告表示，中共对电影内容的审查，是广泛思想控制的一部分。中共利用“防火长城”、控制媒体、限制西方记者采访权等方式，“确保在中国境内讲述的是唯一版本的故事、是经特别批准的故事。北京对好莱坞的影响力，是这项工作的一部分。”</p>
 <p>“北京实行世界上最严格的审查制度之一，在该制度中，电影和其它创作在发行出版前，必须经过国家严格的审查程序”，报告指出，“（谈及）绝大多数的‘敏感’言论被定为刑事犯罪，和平的异议者因发表批评性言论而服刑多年。”</p>
 <h2><strong>蛮横无理的审查制度</strong></h2>
-<p>报告指出，<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%A1%E6%9F%A5.md#1">中共审查</a>制度给予了审查员几乎不受管辖的审查权，审查结果也决定了电影是否被允许上映和推广、电影在何时发行等等，给片商造成巨大的不稳定因素。</p>
+<p>报告指出，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%A1%E6%9F%A5.md#1">中共审查</a>制度给予了审查员几乎不受管辖的审查权，审查结果也决定了电影是否被允许上映和推广、电影在何时发行等等，给片商造成巨大的不稳定因素。</p>
 <p>众所周知，国际电影在中国观众面前放映时，往往会缺少某些内容或画面，这些对话或镜头都依照审查员的要求而删除。</p>
 <p>结果，好莱坞一些最著名的电影都曾被修改。例如，《不可能的任务3》（Mission: Impossible?III，2006）在中国上映时，删去了一些小场面，例如主角伊桑?亨特（Ethan Hunt）杀死中国人的场景，以及上海一间公寓里晾着破旧内衣的画面。</p>
-<figure id="attachment_11893127" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/20200224_sage_film_impossible_mission_fall-out_08.jpg"><img class="size-large wp-image-11893127" src="https://i.epochtimes.com/assets/uploads/2020/02/20200224_sage_film_impossible_mission_fall-out_08-600x317.jpg" alt="汤姆·克鲁斯在《不可能的任务：全面瓦解》伊森韩特，直升机。" width="600" b="317" /></a><figcaption class="wp-caption-text">《不可能的任务3》在中国上映时，删去了一些小场面，例如主角伊桑?亨特（Ethan Hunt）杀死中国人的场景，以及上海一间公寓里晾着破旧内衣的画面。 (Paramount Pictures/Skydance)</figcaption></figure>
+<figure id="attachment_11893127" aria-describedby="caption-attachment-11893127" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/20200224_sage_film_impossible_mission_fall-out_08.jpg"><img class="size-large wp-image-11893127" src="https://i.epochtimes.com/assets/uploads/2020/02/20200224_sage_film_impossible_mission_fall-out_08-600x317.jpg" alt="汤姆·克鲁斯在《不可能的任务：全面瓦解》伊森韩特，直升机。" width="600" b="317" /></a><figcaption id="caption-attachment-11893127" class="wp-caption-text">《不可能的任务3》在中国上映时，删去了一些小场面，例如主角伊桑?亨特（Ethan Hunt）杀死中国人的场景，以及上海一间公寓里晾着破旧内衣的画面。 (Paramount Pictures/Skydance)</figcaption></figure>
 <p>另外詹姆斯?邦德（James Bond）系列电影中的《007：空降危机》（Skyfall，2012年），审查员要求将杀死一名中国保安人员与提及性工作和警察酷刑的片段删除。《皇家赌场》中（Casino Royale，2006年），女演员朱迪?丹奇（Judi Dench）透露，她必须为电影的中文发行版本重新配音，将“基督，我想念冷战”改成“上帝，我想念旧时光”。</p>
 <p>这些重新制作的费用以及无法确定的审查等待时间，为片商增加了巨额的成本。甚至导致电影的国际发行时间和中国发行时间存在巨大落差，等影片在中国上映时，早已错过宣传期。北京电影制片委员会甚至可坚持某些场景必须重拍才能上映，这对制片商来说是一笔不菲的开销。</p>
 <p>“他们拥有强大的权力，因此，你会想要确保在最开始就把所有事做对。”一位制片人兼编剧戴维?弗兰佐尼（David Franzoni）在2013年接受采访时说。</p>
@@ -33,7 +33,7 @@
 <p>报告指：“北京已向电影界发出了明确的信息：批评中国的电影制片人将受到惩罚，而那些配合审查制度的人将受到奖励??实际上，中共在好莱坞电影能否会获利方面占据着主导地位，而制片厂高管也知道这一点。”</p>
 <p>许多知名电影都受到中共内容审查的影响。报告指出，一份泄漏出的电邮揭露，索尼影业《世界大对战》（Pixels，2015）为了确保通过内容审查，删除了几个场景，包括外星人推倒长城的场景。</p>
 <p>泄露出的电邮显示，索尼不仅在中国版中删去该画面，在国际版中也一并删除了。一位索尼高管明确表示，改变国际版对他们来说，能更好地掩盖自我审查的事实。</p>
-<p>高管在电邮中说：“如果我们只更改中国版，当博客主进行版本比较时，就会意识到我们为了避免在<ahref="https://github.com/bxhnqj353/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%B8%82%E5%9C%BA.md#1">中国市场</a>造成争议，而改变了电影设定，媒体也会因此大声疾呼。”</p>
+<p>高管在电邮中说：“如果我们只更改中国版，当博客主进行版本比较时，就会意识到我们为了避免在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%B8%82%E5%9C%BA.md#1">中国市场</a>造成争议，而改变了电影设定，媒体也会因此大声疾呼。”</p>
 <p>除了更改内容外，部分制片商甚至为中国观众在电影中添加额外的场景。</p>
 <p>报告表示，其中最著名的例子是《钢铁侠III》，漫威（Marvel Studios）在中国版的电影中添加了一些场景，描写中国医生为拯救钢铁侠的生命而疯狂地工作。这些增加的内容如此突兀，与电影的其余部分截然不搭，甚至遭到影评人的取笑。</p>
 <p>漫威电影《奇异博士》因为担心危害电影在中国的推广，将主角的导师从图博人转变为凯尔特人。</p>
@@ -41,13 +41,13 @@
 <p>他还表示，这也将冒着被中共认为该电影“参与政治”的风险。该声明发表几天后，卡吉尔出面表示，这段声明只能代表他个人，不能代表漫威的立场，漫威对此争议持续保持沉默。</p>
 <p>报告说：“他的回答也反映出一位编剧在决定如何讲述他的故事时，考虑了中国政府对西藏的态度。”</p>
 <p>2013年的一部电影《末日之战》（World War Z）讲述了造成僵尸末日的疾病爆发。派拉蒙影业（Paramount Pictures）要求电影制片人改变角色的对白。因为在原始对白中，人物讨论到中国是僵尸病毒爆发的起源。然而，尽管已尽力避免审查，该片仍未能在中国上映。</p>
-<figure id="attachment_6726559" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2013/06/1306140018511487.jpg"><img class="size-large wp-image-6726559" src="https://i.epochtimes.com/assets/uploads/2013/06/1306140018511487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">电影《末日之战》讲述了造成僵尸末日的疾病爆发。派拉蒙影业要求电影制片人改变角色的对白。因为在原始对白中，人物讨论到中国是僵尸病毒爆发的起源。（UIP提供）</figcaption></figure>
+<figure id="attachment_6726559" aria-describedby="caption-attachment-6726559" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2013/06/1306140018511487.jpg"><img class="size-large wp-image-6726559" src="https://i.epochtimes.com/assets/uploads/2013/06/1306140018511487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-6726559" class="wp-caption-text">电影《末日之战》讲述了造成僵尸末日的疾病爆发。派拉蒙影业要求电影制片人改变角色的对白。因为在原始对白中，人物讨论到中国是僵尸病毒爆发的起源。（UIP提供）</figcaption></figure>
 <p>2019年的战争电影《决战中途岛》（Midway），上映时正值美中贸易战的高峰。该片是由狮门影业公司主要制作和发行的，但获得了中国企业博纳电影集团8000万美元的资金。</p>
 <p>虽然这部电影中描写了美国的一场军事胜利，但该片批评了中国长期的竞争对手日本的战时暴行，更描述了中国在第二次世界大战中的角色。</p>
 <p>在中国上映时，大约有2分钟的内容被删除，包括美国飞行员轰炸日本后，被中国游击队捉住与盘问的段落。</p>
 <p>中共的英语官媒《中国日报》得出的结论是，博纳的金融投资，通过中国当地人保护美国飞行员的特色场景“使中国在中途岛有了更大的影响力”。</p>
 <p>从中共的角度来看，中国的电影并非纯粹用于娱乐，而是传达认可的信息的方式，这些信息可以增强北京和中共“至高无上”的形象。</p>
-<figure id="attachment_11644234" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/11/0bbbeb97c121fc1e24b1bf5ef6cb1e37.jpg"><img class="size-large wp-image-11644234" src="https://i.epochtimes.com/assets/uploads/2019/11/0bbbeb97c121fc1e24b1bf5ef6cb1e37-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">《决战中途岛》上映时正值美中贸易战高峰，该片获得了中国企业博纳电影集团8000万美元的资金，其内容批评了中国长期的竞争对手日本的战时暴行。（双喜电影提供）</figcaption></figure>
+<figure id="attachment_11644234" aria-describedby="caption-attachment-11644234" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/11/0bbbeb97c121fc1e24b1bf5ef6cb1e37.jpg"><img class="size-large wp-image-11644234" src="https://i.epochtimes.com/assets/uploads/2019/11/0bbbeb97c121fc1e24b1bf5ef6cb1e37-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11644234" class="wp-caption-text">《决战中途岛》上映时正值美中贸易战高峰，该片获得了中国企业博纳电影集团8000万美元的资金，其内容批评了中国长期的竞争对手日本的战时暴行。（双喜电影提供）</figcaption></figure>
 <h2><strong>中国票房加上母公司利益 让片商积极讨好中共</strong></h2>
 <p>中共政权影响电影业的方式，首先是利用庞大的电影市场。在2018年第一季度，中国的季度电影票房收入首次超过美国。根据病毒大流行前的统计，预计2020年中国的电影市场将正式超过美国市场。</p>
 <p>报告指出，过去好莱坞出色、制作精良的大片，质量远超过中国国内的电影。但随着中国电影制作技术的提升，得以在外国大片的竞争中立足，加上中国电影日益受中国观众的喜爱，遂打破了好莱坞电影制片人与北京监管机构之间的平衡，加大了外国片商自我审查以获得中国票房的力度。</p>
@@ -68,36 +68,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/4/23/n12056150.md#1">疫情下 为90亿美元利益 保持沉默的好莱坞</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/4/29/n12069038.md#1">美议员提法案 制裁好莱坞片商与中共合作</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/7/16/n12261646.md#1">巴尔曝光好莱坞和迪士尼向中共磕头内幕</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/7/23/n12279496.md#1">蓬佩奥：美国公司在华经营 未来须持守原则</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/23/n12056150.md#1">疫情下 为90亿美元利益 保持沉默的好莱坞</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/29/n12069038.md#1">美议员提法案 制裁好莱坞片商与中共合作</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/16/n12261646.md#1">巴尔曝光好莱坞和迪士尼向中共磕头内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/23/n12279496.md#1">蓬佩奥：美国公司在华经营 未来须持守原则</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/17/n11660999.md#1" target="_blank">林辉：承天命演绎忠义豪情《水浒》为何被批？</a></li><li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/1/n10606663.md#1" target="_blank">大兴文革：踩撕婴儿 活埋祖孙 一夜杀百人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/5/n12307751.md#1">大陆多省现新布尼亚病毒 已致7死 可人传人</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/4/n12306655.md#1">黎巴嫩首都爆炸 蘑菇云腾起 数千死伤</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/5/n12308101.md#1">中共肺炎疫情升温 陈时中：8大场所应戴口罩</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/4/n12306881.md#1">【独家】党支部名单曝光 抖音何去何从</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/4/n12306639.md#1">细思极恐！大陆手机记录日常对话</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/3/n12304220.md#1">“战狼”吴京主演 中共高调开拍反美片引嘲讽</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/3/n12304444.md#1">59岁台湾艺人罗霈颖猝逝 死因待查</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/4/n12306966.md#1">网爆“天王嫂训练营”潘玮柏郭富城被套路？</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/3/n12304056.md#1">北京下豪雨和冰雹 谢霆锋怨自家菜园受灾</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/5/n12309278.md#1">宣布放弃华为代言 瑞典小天后拉尔森曝光原因</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/2/n12301623.md#1">一个奇梦揭示鸦片膏在另外空间的表现</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/7/24/n12279753.md#1">落榜士子痛骂考官  因何转运金榜题名？</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/3/n12304112.md#1">麒麟阁功臣榜排名第二 张安世“满而不溢”</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/2/n12300632.md#1">春秋时代一场陨石雨  天人感应预兆证验不爽？</a></li>
-<li><a href="https://github.com/bxhnqj353/djy/blob/master/gb/20/8/3/n12302128.md#1">【涛哥侃封神】第四回 恩州驿狐狸死妲己</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bxhnqj353/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bxhnqj353/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/6/n12310889.htm">美国笔会发报告 揭中共审查如何影响好莱坞</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/6/n12310889.htm">美国笔会报告 揭中共审查如何影响好莱坞</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/bxhnqj353/djy/blob/master/gb/20/8/6/n12310889.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bxhnqj353/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bxhnqj353/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bxhnqj353/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bxhnqj353/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bxhnqj353/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/8/6/n12310889.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
